pkg/lang/testdata/ub/inputs/invalid/default-below-minimum.ub
inputs: {
  size: { type: optional(integer, 0), minimum: 1 }
}
